fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -464,7 +464,7 @@
 }
 
 .prodDetailPopup .heading {
-  width: 35%;
+  width: 40%;
 }
 
 .prodDetailPopup .detail {
